Finalised Motion Matrix en Prototyping

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </section>
 
             <!--MOTION MATRIX INTRO-->
-            <section class="sectionSpaceTop sectionSpaceBottom" id="motionMatrix">
+            <section class="sectionSpaceTop" id="motionMatrix">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
@@ -427,7 +427,7 @@
             </section>
 
             <!--PROTOTYPING INTRO-->
-            <section class="sectionSpaceBottom" id="prototyping">
+            <section id="prototyping">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
@@ -436,7 +436,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
-                            <h5>In order to test our guidelines and come up with specific rules we made as many prototypes as possible. We used Zach Johnston’s talk; Prototype to understand and prototype to be understood as inspiration.  </h5>
+                            <h5>In order to test our guidelines and come up with specific rules we made as many prototypes as possible, using different tools that fitted the job to be done the best.</h5>
                         </div>
                     </div>
                 </div>
@@ -454,47 +454,42 @@
                                     <a class="nav-link button button-secondary active" id="framer-tab" data-toggle="tab" href="#framer" role="tab" aria-controls="framer" aria-selected="true"><img src="assets/img/logoFramer.png" alt="Framer logo"></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link button button-secondary" id="github-tab" data-toggle="tab" href="#github" role="tab" aria-controls="github" aria-selected="false"><img src="assets/img/logoGitHub.png" alt="GitHub logo"></a>
+                                    <a class="nav-link button button-secondary" id="principle-tab" data-toggle="tab" href="#principle" role="tab" aria-controls="principle" aria-selected="false"><img src="assets/img/logoPrinciple.png" alt="Principle logo"></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link button button-secondary" id="principle-tab" data-toggle="tab" href="#principle" role="tab" aria-controls="principle" aria-selected="false"><img src="assets/img/logoPrinciple.png" alt="Principle logo"></a>
+                                    <a class="nav-link button button-secondary" id="github-tab" data-toggle="tab" href="#github" role="tab" aria-controls="github" aria-selected="false"><img src="assets/img/logoGitHub.png" alt="GitHub logo"></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link button button-secondary" id="sketch-tab" data-toggle="tab" href="#sketch" role="tab" aria-controls="sketch" aria-selected="false"><img src="assets/img/logoSketch.png" alt="Sketch logo"></a>
                                 </li>
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link button button-secondary" id="figma-tab" data-toggle="tab" href="#figma" role="tab" aria-controls="figma" aria-selected="false"><img src="assets/img/logoFigma.png" alt="Figma logo"></a>
-                                </li>
+                                </li> -->
                             </ul>
-                            <p>It was important for us to make as many prototypes and test rounds as possible in order to test the guidelines and draw up specific rules. We took the talk; prototype to understand and prototype to be understood by zach Johnston as the starting point for prototyping. </p>
+                            <p>Based on knowledge about the difference between <i>prototyping to understand</i> and <i>prototyping to be understood</i> we learned from designer <a href="https://twitter.com/zach__johnston" target="_blank">Zach Johnston (Framer)</a>, we built bigger prototypes in Framer so we could test our motion principles on a “functional” routeplanner and we built simple prototypes using Principle to understand and explore multiple quick ideas. <br>We used GitHub for version control and quickly creating and sharing test-URLs. Sketch was our design-tool of choice because all Poncho-components already lived there.</p>
                         </div>
                         <div class="col-12 col-md-5 col-xl-6">
                             <div class="tab-content" id="myTabContent02">
                                 <div class="tab-pane fade show active" id="framer" role="tabpanel" aria-labelledby="framer-tab">
-                                    <h3>Framer</h3>
-                                    <!-- <img src="assets/img/motionMatrix.png" alt="Our Motion Matrix model"> -->
-                                </div>
-                                <div class="tab-pane fade" id="github" role="tabpanel" aria-labelledby="github-tab">
-                                    <h3>GitHub</h3>
-                                    <!-- <img src="assets/img/motionMatrix.png" alt="Our Motion Matrix model"> -->
+                                    <img src="assets/img/toolFramer.png" alt="Using Framer">
                                 </div>
                                 <div class="tab-pane fade" id="principle" role="tabpanel" aria-labelledby="principle-tab">
-                                    <h3>Principle</h3>
-                                    <!-- <img src="assets/img/motionMatrix.png" alt="Our Motion Matrix model"> -->
+                                    <img src="assets/img/toolPrinciple.png" alt="Using Principle">
+                                </div>
+                                <div class="tab-pane fade" id="github" role="tabpanel" aria-labelledby="github-tab">
+                                    <img src="assets/img/toolGitHub.png" alt="Using GitHub">
                                 </div>
                                 <div class="tab-pane fade" id="sketch" role="tabpanel" aria-labelledby="sketch-tab">
-                                    <h3>Sketch</h3>
-                                    <!-- <img src="assets/img/motionMatrix.png" alt="Our Motion Matrix model"> -->
+                                    <img src="assets/img/toolSketch.png" alt="Using Sketch">
                                 </div>
-                                <div class="tab-pane fade" id="figma" role="tabpanel" aria-labelledby="figma-tab">
+                                <!-- <div class="tab-pane fade" id="figma" role="tabpanel" aria-labelledby="figma-tab">
                                     <h3>Figma</h3>
-                                    <!-- <img src="assets/img/motionMatrix.png" alt="Our Motion Matrix model"> -->
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+            </section class="sectionSpaceBottom">
 
         </main>
 
