--- a/index.html
+++ b/index.html
@@ -489,7 +489,88 @@
                         </div>
                     </div>
                 </div>
-            </section class="sectionSpaceBottom">
+            </section>
+
+            <!--TESTING INTRO-->
+            <section id="testing">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Testing</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
+                            <h5>To validate the guidelines and rules we came up with, we got the opportunity to use the ANWB’s Usability-lab and test our prototypes.</h5>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!--TESTING EXPLAINED-->
+            <section class="sectionSpaceBottom" id="testingExplained">
+                <div class="container">
+                    <div class="centeredRow row">
+                        <div class="col-12 col-md-5 col-xl-6">
+                            <img src="assets/img/testing.png" alt="Testing at ANWB's usability-lab">
+                        </div>
+                        <div class="col-12 col-md-7 col-xl-6">
+                            <h4>subtitle</h4>
+                            <h3>Fancypancy title</h3>
+                            <p>Because testing if motion is the reason for a change in behavior, attitude and / or emotion, we tested the impact of motion using the methode A/B testing. By using this methode it was possible to discover how people responded to the current website and if there was a change in behavior when motion was added to the website. These tests are performed in the ANWB’s Usability-lab (master prototypes) and at school (mini prototypes).</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!--KEY TO SUCCESS-->
+            <section class="sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="differentOut">
+                <div class="container">
+                    <div class="row">
+                        <div class="cardFirst col-6 col-md-3">
+                            <img src="assets/img/teamJellaWesterhout.png" alt="Jella Westerhout">
+                            <h5>Interaction</h5>
+                            <p>Jella verandert chaos in georganiseerde chaos</p>
+                            <div class="differentSocials">
+                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a class="button button-primary">
+                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
+                                <a class="button button-primary" href="http://jellawesterhout.com/" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
+                            </div>
+                        </div>
+                        <div class="cardFirst col-6 col-md-3">
+                            <img src="assets/img/teamMichelVanHeest.png" alt="Michel van Heest">
+                            <h5>Prototyping</h5>
+                            <p>Michel is onze ambitieuze special snowflake</p>
+                            <div class="differentSocials">
+                                <a class="button button-primary" href="https://twitter.com/michelvanheest" target="_blank"><i class="fab fa-twitter"></i></a class="button button-primary">
+                                <a class="button button-primary" href="https://dribbble.com/michelvanheest" target="_blank"><i class="fab fa-dribbble"></i></a>
+                                <!-- <a class="button button-primary" href="https://www.linkedin.com/in/michelvanheest" target="_blank"><i class="fab fa-linkedin-in"></i></a> -->
+                                <a class="button button-primary" href="https://michelvanheest.com/" target="_blank"><i class="fas fa-laptop"></i></a>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="assets/img/teamCorneVanDenBoogert.png" alt="Corné van den Boogert">
+                            <h5>Visual</h5>
+                            <p>Corné voorziet ons van koffie en slechte humor</p>
+                            <div class="differentSocials">
+                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a>
+                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
+                                <a class="button button-primary" href="" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="assets/img/teamKayleighDeHaan.png" alt="Kayleigh de Haan">
+                            <h5>Concepting</h5>
+                            <p>Kayleigh is onze slimme, vrolijke krullenbol</p>
+                            <div class="differentSocials">
+                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a>
+                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
+                                <a class="button button-primary" href="https://www.kayleighdehaan.nl/" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </main>
 
