--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <a class="button button-secondary activateModal">Play case-video</a>
+                        <a class="button button-secondary activateModal"><i class="fas fa-play"></i>  Play case-video</a>
                         <!-- <a class="button button-secondary" href="assets/vid/different-anwb-casefilm_lfs.mp4" target="_blank" role="button">Play case-video</a> -->
                         <!-- <div class="button button-secondary activateModal">Check prototype</div> -->
                     </div>
@@ -492,7 +492,7 @@
             </section>
 
             <!--TESTING INTRO-->
-            <section id="testing">
+            <section class=" sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="testing">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
@@ -504,11 +504,21 @@
                             <h5>To validate the guidelines and rules we came up with, we got the opportunity to use the ANWB’s Usability-lab and test our prototypes.</h5>
                         </div>
                     </div>
+                    <div class="centeredRow row">
+                        <div class="col-12 col-md-5 col-xl-6">
+                            <img src="assets/img/testing.png" alt="Testing at ANWB's usability-lab">
+                        </div>
+                        <div class="col-12 col-md-7 col-xl-6">
+                            <h4>subtitle</h4>
+                            <h3>Fancypancy title</h3>
+                            <p>Because testing if motion is the reason for a change in behavior, attitude and / or emotion, we tested the impact of motion using the methode A/B testing. By using this methode it was possible to discover how people responded to the current website and if there was a change in behavior when motion was added to the website. These tests are performed in the ANWB’s Usability-lab (master prototypes) and at school (mini prototypes).</p>
+                        </div>
+                    </div>
                 </div>
             </section>
 
             <!--TESTING EXPLAINED-->
-            <section class="sectionSpaceBottom" id="testingExplained">
+            <!-- <section class="sectionSpaceBottom purpleBG" id="testingExplained">
                 <div class="container">
                     <div class="centeredRow row">
                         <div class="col-12 col-md-5 col-xl-6">
@@ -519,6 +529,32 @@
                             <h3>Fancypancy title</h3>
                             <p>Because testing if motion is the reason for a change in behavior, attitude and / or emotion, we tested the impact of motion using the methode A/B testing. By using this methode it was possible to discover how people responded to the current website and if there was a change in behavior when motion was added to the website. These tests are performed in the ANWB’s Usability-lab (master prototypes) and at school (mini prototypes).</p>
                         </div>
+                    </div>
+                </div>
+            </section> -->
+
+            <!--CASEVID BOTTOM INTRO-->
+            <section class="sectionSpaceTop" id="caseVideo">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Different Case Video</h2>
+                        </div>
+                    </div>
+                    <!-- <div class="row">
+                        <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
+                            <h5>To validate the guidelines and rules we came up with, we got the opportunity to use the ANWB’s Usability-lab and test our prototypes.</h5>
+                        </div>
+                    </div> -->
+                </div>
+            </section>
+
+            <!--CASEVID BOTTOM-->
+            <section id="caseVideoBottom">
+                <div class="container">
+                    <div class="col-12">
+                        <a class="button button-secondary activateModal"><i class="fas fa-play"></i>  Play case-video</a>
+                        <img src="assets/img/headerBackgroundIMG.jpg" alt="Different case-video">
                     </div>
                 </div>
             </section>
@@ -573,6 +609,10 @@
             </section>
 
         </main>
+
+        <footer>
+            <h2>hierkomtnogeenbedankjewel</h2>
+        </footer>
 
         <!--CUSTOM JS-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
