--- a/index.html
+++ b/index.html
@@ -334,17 +334,17 @@
                 </div>
             </section>
 
-            <!--TRELLO + SOME GUIDELINES-->
+            <!--GUIDELINES-->
             <section class="sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="resultUitleg">
                 <div class="container">
-                    <div class="row" id="trelloBackground">
+                    <div class="row">
                         <div class="col-12 col-md-4">
                             <h4>design system</h4>
-                            <h3>Iets over <br>onze guidelines</h3>
-                            <p>Hier komt wellicht een introtekst die wat vertelt over waar we research naar hebben gedaan en waarom.</p>
+                            <h3>Principles, Guidelines & Rules</h3>
+                            <p>The guidelines we created are divided in three categories. These types of guidelines are meant to challenge the designers to push the boundaries.</p>
                         </div>
                         <div class="col-12 col-md-8">
-                            <img src="assets/img/trello.png" alt="Our Trello planning board">
+                            <img src="assets/img/DSM.png" alt="The InVision DSM with Principles, Guidelines and Rules">
                         </div>
                     </div>
                     <div class="sectionSpaceTop row">
