o of a who cares

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 <div class="row">
                     <div class="col-12 offset-md-1 col-md-10 offset-xl-2 col-xl-8">
                         <h3>Special thanks to...</h3>
-                        <p>Sanne Kloot, Chloé Rice & Coen de Heer <span class="purpleText">ANWB</span>・Daniël de Wit <span class="purpleText">WebNL</span>・Bruce Moerdjiman, Jasper Schelling, Laura Jongmans <span class="purpleText">Hogeschool Rotterdam</span>・Robin Iseger <span class="purpleText">Inter Voice Over</span>・Strakzat <span class="purpleText">Filmlocatie</span>・Hana Kiani, Stefan Mol, Stef Rullens, Dionne de Vries, Elwin de Witte, Jasper den Ouden <span class="purpleText">Acteurs</span>・Daniel Korpai <span class="purpleText">InVision</span>・Jo Ash <span class="purpleText">Headspace</span></p>
+                        <p>Sanne Kloot, Chloé Rice & Coen de Heer <span class="purpleText">ANWB</span>・Daniël de Wit <span class="purpleText">WebNL</span>・Bruce Moerdjiman, Jasper Schelling, Laura Jongmans <span class="purpleText">Hogeschool Rotterdam</span>・Rabin Iseger <span class="purpleText">Inter Voice Over</span>・Strakzat <span class="purpleText">Filmlocatie</span>・Hana Kiani, Stefan Mol, Stef Rullens, Dionne de Vries, Elwin de Witte, Jasper den Ouden <span class="purpleText">Acteurs Casefilm</span>・Daniel Korpai <span class="purpleText">InVision Studio / DSM</span>・Zach Johnston <span class="purpleText">Framer</span>・Jo Ash <span class="purpleText">Headspace</span></p>
                     </div>
                 </div>
             </div>
