--- a/index.html
+++ b/index.html
@@ -38,10 +38,72 @@
                 </video>
             </div>
         </section>
+
+        <section id="stickyNav">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                            <!-- <a class="navbar-brand" href="#"><img src="assets/img/differentLogoDark.png" alt="Different logo"></a> -->
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarText">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                        <a id="introLink" class="nav-link" href="#intro">Intro</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="challengeLink" class="nav-link" href="#challenge">Challenge</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="keyToSuccessLink" class="nav-link" href="#keyToSuccess">The key to success</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="contextLink" class="nav-link" href="#context">Context</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="researchLink" class="nav-link" href="#research">Research</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="conceptingLink" class="nav-link" href="#concepting">Concepting</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="problemStatementLink" class="nav-link" href="#problemStatement">Problem statement</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="resultLink" class="nav-link" href="#result">The result</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="motionMatrixLink" class="nav-link" href="#motionMatrix">The motion matrix</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="prototypingLink" class="nav-link" href="#prototyping">Prototyping</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="testingLink" class="nav-link" href="#testing">Testing</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="caseVideoLink" class="nav-link" href="#caseVideo">Case video</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- <a class="button button-primary" href="https://diffrntworkspace.slack.com/" role="button" target="_blank">Contact on Slack</a> -->
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         
         <!--HEADER/HERO-->
-        <header>
+        <header id="intro">
             <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="assets/img/differentLogoLight.png" alt="">
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-12 col-md-12 col-xl-9">
                         <h1>Adding motion to ANWB’s Design System Poncho</h1>
@@ -78,7 +140,7 @@
                     </div>
                     <div class="row">
                         <div class="imgCentered col-12">
-                            <img src="assets/img/differentLogo.png" alt="different logo">
+                            <img src="assets/img/differentLogoDark.png" alt="different logo">
                         </div>
                     </div>
                 </div>
@@ -384,7 +446,7 @@
             </section>
 
             <!--MOTION MATRIX EXPLAINED-->
-            <section class="sectionSpaceBottom" id="motionMatrixExplained">
+            <section id="motionMatrixExplained">
                 <div class="container">
                     <div class="centeredRow row">
                         <div class="col-12 col-md-5 col-xl-6">
@@ -427,7 +489,7 @@
             </section>
 
             <!--PROTOTYPING INTRO-->
-            <section id="prototyping">
+            <section class="sectionSpaceTop" id="prototyping">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
@@ -538,7 +600,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>Different Case Video</h2>
+                            <h2>Case Video</h2>
                         </div>
                     </div>
                     <!-- <div class="row">
@@ -569,7 +631,7 @@
                             <p>Jella verandert chaos in georganiseerde chaos</p>
                             <div class="differentSocials">
                                 <a class="button button-primary" href="https://dribbble.com/JellaWesterhout" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a class="button button-primary">
-                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
+                                <a class="button button-primary" href="https://www.linkedin.com/in/jella-westerhout-4baa27161/" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
                                 <a class="button button-primary" href="http://jellawesterhout.com/" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
                             </div>
                         </div>
