ASCII art ‘cause hell why not #ineedsomebeer

--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!--
+================================================================
+
+Hoi Broezer, kom je even gluren of we het een beetje netjes gebouwd hebben..? 🤓🤪
+
+================================================================
+
+© Copyright 2020 team Different.
+Minor Interface & User Experience Design at The Rotterdam University of Applied Sciences, on behalf of ANWB.
+
+Want to contact us?
+Send an e-mail to contact@michelvanheest.com
+
+_____  _  __  __                    _    __   __           _   ___          ______  
+|  __ \(_)/ _|/ _|                  | |   \ \ / /     /\   | \ | \ \        / /  _ \ 
+| |  | |_| |_| |_ ___ _ __ ___ _ __ | |_   \ V /     /  \  |  \| |\ \  /\  / /| |_) |
+| |  | | |  _|  _/ _ \ '__/ _ \ '_ \| __|   > <     / /\ \ | . ` | \ \/  \/ / |  _ < 
+| |__| | | | | ||  __/ | |  __/ | | | |_   / . \   / ____ \| |\  |  \  /\  /  | |_) |
+|_____/|_|_| |_| \___|_|  \___|_| |_|\__| /_/ \_\ /_/    \_\_| \_|   \/  \/   |____/ 
+
+================================================================
+-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -15,17 +37,22 @@
         <script defer src="js/fontawesome-all.js"></script>
         
         <!--GOOGLE/META-->
-        <!-- <link rel="shortcut icon" type="image/png" href=""/> -->
+        <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
         <title></title>
         <!-- <meta name="description" content="Insert meta description here"> -->
         <!-- <meta name="keywords" content="Insert epic keywords here"/> -->
-        <meta name="author" content="Michel van Heest"/>
+        <meta name="author" content="Michel van Heest for Different Designers, a minor project of The Rotterdam University of Applied Sciences"/>
         <meta name="reply-to" content="contact@michelvanheest.com"/>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99827935-4"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-        <!-- Hotjar Tracking Code for https://michelvanheest.com/ -->
-
+        gtag('config', 'UA-99827935-4');
+        </script>
     </head>
     <body>
         <!--VIDEO OVERLAY-->
