--- a/index.html
+++ b/index.html
@@ -1,35 +1,60 @@
 <!--
 ================================================================
 
-Hoi Broezer, kom je even gluren of we het een beetje netjes gebouwd hebben..? 🤓🤪
+Hey Broezer, come and take a peek if we have built this nicely..? 🤪
+While you're here, take a beer and enjoy some ASCII art because hey, we're diffərənt 🤓
 
 ================================================================
 
-© Copyright 2020 team Different.
+© Copyright 2020 team Diffərənt.
 Minor Interface & User Experience Design at The Rotterdam University of Applied Sciences, on behalf of ANWB.
 
 Want to contact us?
 Send an e-mail to contact@michelvanheest.com
 
-_____  _  __  __                    _    __   __           _   ___          ______  
-|  __ \(_)/ _|/ _|                  | |   \ \ / /     /\   | \ | \ \        / /  _ \ 
-| |  | |_| |_| |_ ___ _ __ ___ _ __ | |_   \ V /     /  \  |  \| |\ \  /\  / /| |_) |
-| |  | | |  _|  _/ _ \ '__/ _ \ '_ \| __|   > <     / /\ \ | . ` | \ \/  \/ / |  _ < 
-| |__| | | | | ||  __/ | |  __/ | | | |_   / . \   / ____ \| |\  |  \  /\  /  | |_) |
-|_____/|_|_| |_| \___|_|  \___|_| |_|\__| /_/ \_\ /_/    \_\_| \_|   \/  \/   |____/ 
 
-================================================================
+                                 .:;S@888@@S;.                                                      
+  .  . .  .  . .  .  . ..:::;tS@@@ 8 8S88@8 888X%X;. .  .  . .  . .  . .  . .  . .  . .  . .  . .  .
+   .       .       .:tX888%.   8X8@88888888 @88888 88@.        .         .         .         .      
+     .  .    .  . :8@8t%.. .  % @@88S@8888888@8@888X88t .  .      . .  .    . .  .    . .  .    . . 
+ .       .     .%8S@S@ ..  8  @S8XSS 888888@888@88 8Xt.      .  .         .         .    88@@@8.    
+   .  .    . ;X8S8X@ t8      X888@..:88888888@@ 8St;   . .    .    . .  .    . .  .    .@%88S8S     
+  .    .  . 8 S8@@@  ;S8  8t8@  %  . .:;;  888t::    .     .    .     .    .     .   .  @8XS88: . . 
+    .    .%S8:S@ 8  :;8@%8;.:: .;tt;:.  . .; . ...::. .  .        .     .     .    .   8X888@S;;.   
+  .   . %.8:SX 8 ::;;SS. .:8%8;8;88%8888  .888.8S88;888.    :S@888S  S8888S: .88888;  S88888S8X888 ;
+    .  8 X;XX8 :;;8 X.;  S8888X88;8S88S8  8@888@88888@8%%   %888@  .  8@X@8; ;8@%X8S  S8%88X888888%X
+  .  .X S%XX .;t8 8@   SS@888;S;.:88@X8; .88@8XX  :;S@S88  S88X88t  88X8@@%  ;8S8X:  88%888S. :@8S8@
+    t:.8t888.t8  S:  .88888 :   ;88%8XS .8@@8@%.  t88@888 :@@X88@  t88888  .88@88@t.%X8888      @@88
+  .:;:.:S8X@.:.;@% . ;88888S    ;8S88:. 8@S888t   ;8@88...88@88 .. :XX8@8t :8888@X . S@888:   %8S88X
+  :8.@8S88 :t8.:8%.  8@S88:  . @8X888% t8888@8   S8X888. ;@8888%  S8%888@  8@@88 ; @8S888%   : 8888t
+ :8.@S88:;%%.@8 8;  :8X88@%t.tt8S88%...%SS8@%  .:8888X8..X8%888.:88%888X ;t8X88@t t88S88@;:%S8S88X; 
+ 8t;8888;8;: 8 ;S.. :%8X8888@%%@88XX  88%88@t.  %@@88@:.88S88X8@X%88@88@@;%8888% .:@.8XS888%t@8@ ;. 
+;t.@X@:%8:8;8 8; :. . tX@8@X888S8S8S .X@8888:  ;X8%88S .;;@X8@X8S88X8SX8SS888 X. t8@X8@88St@8@ 8:   
+S;: 88%.88:8.%8S:St   .  :t.;:   .;:S;:  . :.  .:       ..  ::@St      t8@tt;.  .:;  .   .%t ...  . 
+8:8888 :S8;888X@8 ;8;     .      %S88%:.  .  .   .     .       ..      .   .  .          :    .     
+@%88S S;.XS.88.t%%t;. :%.  .8SX8t;;;8 S;   .  .  .   .   . . .   .     .    .   . .       .  .  .  .
+:888 t8S888 %@8S8:.888.8. %8%88:.8%8::.88.  .  .@X8:   .       . .      . .         .          .    
+%8; ;X.8.X;t8%8:8.8: @@t %8SS:t;:%8;8;.8:%   ..t8@...     . .     .  .       . . .      .  .     .  
+S8t@888:;:%%t8tt;;%%8S8 88t%88%8S8:X.8X888@ ;8:88.  . . .    .  .     .  . .      .  .    .  .    . 
+t:88.888..8;888t8;8%88%8:8%8%88:8.%;8.88t@@X:88 :.   .    .    .  . .         .        .      . .   
+%:88@8.%@%..@8t8::X8%.8:S8;88:8:S:8. 8@ t8 tX:  .. .   .    .          .  .     . . .    . .        
+ X.8:8;88%.S8:;S8S8; :XX.8:8;.t88tX8 %8X:.88.8%   .      .    .  .  .       .         .      .   .  
+ .88..;;; 8888@8;8.S%88. %%%88 @%S888888:8@.@; ..   .  .   .          . .     .  .  .   .  .   .    
+ . S.88;:88 .%  @88:.:@88@:...XS S88:8;8:%t:  .              . .  .       . .      .     .   .    . 
+   %8X8::888%.88@ 8888888;@8;8.88t8. 8X8: .:    . .  .  . .        .  .        .     . .        .   
+   ..  88.8:8888t8:... ...;8t8X.:@:% .;:   .. .       .     .  . .      .  .    .  .      . .       
+  . . .;   X888:;8S8%8%8S88X.8@t :.    . .  .   .  .     .          .    .   .        .       .  .  
+
+
+Team Diffərənt out 👊🎤💨
+
+  ================================================================
 -->
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-        <!--BOOTSTRAP + JQUERY-->
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
         
         <!--CUSTOM CSS-->
         <link rel="stylesheet" href="bootstrap/css/bootstrap-mvh27112019.css">
@@ -718,3 +743,17 @@ _____  _  __  __                    _    __   __           _   ___          ____
         <script type="text/javascript" src="js/animate.js"></script>
     </body>
 </html>
+
+<!--
+================================================================
+
+_____  _  __  __                    _    __   __           _   ___          ______  
+|  __ \(_)/ _|/ _|                  | |   \ \ / /     /\   | \ | \ \        / /  _ \ 
+| |  | |_| |_| |_ ___ _ __ ___ _ __ | |_   \ V /     /  \  |  \| |\ \  /\  / /| |_) |
+| |  | | |  _|  _/ _ \ '__/ _ \ '_ \| __|   > <     / /\ \ | . ` | \ \/  \/ / |  _ < 
+| |__| | | | | ||  __/ | |  __/ | | | |_   / . \   / ____ \| |\  |  \  /\  /  | |_) |
+|_____/|_|_| |_| \___|_|  \___|_| |_|\__| /_/ \_\ /_/    \_\_| \_|   \/  \/   |____/ 
+
+
+================================================================
+-->
