added hidden loading animation fade

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Team Diffərənt out 👊🎤💨
         </section>
 
         <section id="stickyNav">
-            <div class="container-fluid">
+            <div class="container-fluid hidden">
                 <div class="row">
                     <div class="col-12">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -150,7 +150,7 @@ Team Diffərənt out 👊🎤💨
         
         <!--HEADER/HERO-->
         <header id="intro">
-            <div class="container">
+            <div class="container hidden">
                 <div class="row">
                     <div class="col-12">
                         <img src="assets/img/differentLogoLight.png" alt="">
@@ -179,7 +179,7 @@ Team Diffərənt out 👊🎤💨
         <main>
             <!--CHALLENGE-->
             <section class="sectionSpaceTop sectionSpaceBottom" id="challenge">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12 offset-xl-3 col-xl-6">
                             <h2>Our challenge</h2>
@@ -200,7 +200,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--WIDE TEAM IMAGE-->
             <section id="teamImage">
-                <div class="container-fluid">
+                <div class="container-fluid hidden">
                     <div class="row">
                         <img src="assets/img/teamImageDesktop.jpg" class="imgDesktop" alt="Different team SKIITTTSKITTTTT 🤙">
                         <img src="assets/img/teamImageMobile.jpg" class="imgMobile" alt="Different team SKIITTTSKITTTTT 🤙">
@@ -210,7 +210,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--SKIP BUTTON-->
             <section class="sectionSpaceTop sectionSpaceBottom" id="skip">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h3>Can't wait?</h3>
@@ -222,7 +222,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--KEY TO SUCCESS-->
             <section class="sectionSpaceTop purpleBG" id="keyToSuccess">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>The key to success</h2>
@@ -262,7 +262,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--CONTEXT-->
             <section class="sectionSpaceTop sectionSpaceBottom" id="context">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>Context</h2>
@@ -278,7 +278,7 @@ Team Diffərənt out 👊🎤💨
             
             <!--STAKEHOLDERMAP-->
             <section class="sectionSpaceBottom" id="whoDidWeWorkWith">
-                <div class="container">
+                <div class="container hidden">
                     <div class="centeredRow row">
                         <div class="col-12 col-md-6">
                             <img src="assets/img/stakeholderMap.png" alt="Different stakeholdermap">
@@ -294,7 +294,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--RESEARCH INTRO-->
             <section class="sectionSpaceTop purpleBG" id="research">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>Research</h2>
@@ -333,7 +333,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--RESEARCH INSIGHTS SCROLLTHINGHY-->
             <section class="sectionSpaceTop" id="insights">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="sticky col-12 col-md-4" id="insightsIntro">
                             <h4>research</h4>
@@ -349,7 +349,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--CONCEPTING INTRO-->
             <section class="sectionSpaceTop sectionSpaceBottom" id="concepting">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>Concepting</h2>
@@ -365,7 +365,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--GOLDEN FILTER DANIEL AHOYYYY-->
             <section class="sectionSpaceBottom" id="goldenFilter">
-                <div class="container">
+                <div class="container hidden">
                     <div class="centeredRow row">
                         <div class="col-12 col-md-5">
                             <img src="assets/img/golderFilter.png" alt="Golden Filter of UX">
@@ -381,7 +381,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--POAR NEEM'N INTRO-->
             <section class="sectionSpaceTop sectionSpaceBottom purpleBG" id="problemStatement">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>Problem Statement</h2>
@@ -397,7 +397,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--POAR NEEM'N CARDS-->
             <section id="conceptCards">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="cardFirst col-12 offset-lg-2 col-lg-4">
                             <div class="card">
@@ -419,7 +419,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--FANCY PROTO VID-->
             <section class="sectionSpaceTop sectionSpaceBottom" id="result">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>The result</h2>
@@ -450,7 +450,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--GUIDELINES-->
             <section class="sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="resultUitleg">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <h4>design system</h4>
@@ -483,7 +483,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--MOTION MATRIX INTRO-->
             <section class="sectionSpaceTop" id="motionMatrix">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>The motion matrix</h2>
@@ -499,7 +499,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--MOTION MATRIX EXPLAINED-->
             <section id="motionMatrixExplained">
-                <div class="container">
+                <div class="container hidden">
                     <div class="centeredRow row">
                         <div class="col-12 col-md-5 col-xl-6">
                             <div class="tab-content" id="myTabContent01">
@@ -542,7 +542,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--PROTOTYPING INTRO-->
             <section class="sectionSpaceTop" id="prototyping">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>Prototyping</h2>
@@ -558,7 +558,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--PROTOTYPING EXPLAINED-->
             <section class="sectionSpaceBottom" id="prototypingExplained">
-                <div class="container">
+                <div class="container hidden">
                     <div class="centeredRow row">
                         <div class="col-12 col-md-7 col-xl-6">
                             <h4>prototyping</h4>
@@ -607,7 +607,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--TESTING INTRO-->
             <section class=" sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="testing">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>Testing</h2>
@@ -649,7 +649,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--CASEVID BOTTOM INTRO-->
             <section class="sectionSpaceTop" id="caseVideo">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
                             <h2>Case Video</h2>
@@ -665,7 +665,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--CASEVID BOTTOM-->
             <section id="caseVideoBottom">
-                <div class="container">
+                <div class="container hidden">
                     <div class="col-12">
                         <a class="button button-secondary activateModal"><i class="fas fa-play"></i>  Play case-video</a>
                         <img src="assets/img/headerBackgroundIMG.jpg" alt="Different case-video">
@@ -675,7 +675,7 @@ Team Diffərənt out 👊🎤💨
 
             <!--KEY TO SUCCESS-->
             <section class="sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="differentOut">
-                <div class="container">
+                <div class="container hidden">
                     <div class="row">
                         <div class="cardFirst col-6 col-md-3">
                             <img src="assets/img/teamJellaWesterhout.png" alt="Jella Westerhout">
@@ -725,7 +725,7 @@ Team Diffərənt out 👊🎤💨
         </main>
 
         <footer class="sectionSpaceTop sectionSpaceBottom">
-            <div class="container">
+            <div class="container hidden">
                 <div class="row">
                     <div class="col-12 offset-md-1 col-md-10 offset-xl-2 col-xl-8">
                         <h3>Special thanks to...</h3>
