als je een easter doet moet je t wel goed doen

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 ================================================================
 
-Hey Broezer, come and take a peek if we have built this nicely..? 🤪
+Hey Broezer, taking a peek to see if we have built this nicely..? 🤪
 While you're here, take a beer and enjoy some ASCII art because hey, we're diffərənt 🤓
 
 ================================================================
@@ -48,7 +48,7 @@ t:88.888..8;888t8;8%88%8:8%8%88:8.%;8.88t@@X:88 :.   .    .    .  . .         . 
 
 Team Diffərənt out 👊🎤💨
 
-  ================================================================
+================================================================
 -->
 <!DOCTYPE html>
 <html>
